--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 # MySQL connection string used by Prisma
 # Format: mysql://USER:PASSWORD@HOST:PORT/DATABASE
 DATABASE_URL="mysql://root:password@localhost:3306/financial_crisis"
+
+# Auth (JWT)
+JWT_ACCESS_SECRET="change-me-access"
+JWT_REFRESH_SECRET="change-me-refresh"
+JWT_ACCESS_EXPIRES_IN="15m"
+JWT_REFRESH_EXPIRES_IN="7d"
