--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
 # MySQL connection string used by Prisma
 # Format: mysql://USER:PASSWORD@HOST:PORT/DATABASE
-DATABASE_URL="mysql://root:password@localhost:3306/financial_crisis"
+DATABASE_URL="mysql://root:root@localhost:3306/financial_crisis"
 
 # Auth (JWT)
 JWT_ACCESS_SECRET="change-me-access"
 JWT_REFRESH_SECRET="change-me-refresh"
 JWT_ACCESS_EXPIRES_IN="15m"
 JWT_REFRESH_EXPIRES_IN="7d"
+
+# Gemini
+# Get key from Google AI Studio. Keep it secret.
+GEMINI_API_KEY=""
+GEMINI_MODEL="gemini-1.5-pro"
