--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,22 @@
 {
-	"version": 2,
-	"functions": {
-		"api/index.ts": {
-			"maxDuration": 15
-		}
-	},
-	"builds": [
-		{
-			"src": "api/index.ts",
-			"use": "@vercel/node"
-		}
-	],
-	"routes": [
-		{
-			"src": "/(.*)",
-			"dest": "api/index.ts"
-		}
-	]
+    "version": 2,
+    "builds": [
+        {
+            "src": "src/main.ts",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "src/main.ts",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "PATCH",
+                "DELETE"
+            ]
+        }
+    ]
 }
